--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-Test/en_US.twitter.txt filter=lfs diff=lfs merge=lfs -text
+* text eol=lf
+*.csv text
 en_US_twitter.txt filter=lfs diff=lfs merge=lfs -text
